// ç®€å•çš„æµ‹è¯•è„šæœ¬ï¼Œç”¨äºéªŒè¯ Node.js å®¢æˆ·ç«¯èƒ½å¦è¿æ¥åˆ° C# gRPC æœåŠ¡

import { MetaJadeHome } from './index.js';

// æ·»åŠ è¶…æ—¶æœºåˆ¶
const withTimeout = (promise, timeout = 5000, timeoutMsg = 'æ“ä½œè¶…æ—¶') => {
  return Promise.race([
    promise,
    new Promise((_, reject) => {
      setTimeout(() => reject(new Error(timeoutMsg)), timeout);
    })
  ]);
};

async function testClient() {
  console.log('æ­£åœ¨æµ‹è¯• Node.js å®¢æˆ·ç«¯è¿æ¥åˆ° C# gRPC æœåŠ¡...');
  
  try {
    // åˆ›å»ºå®¢æˆ·ç«¯å®ä¾‹
    const metaJadeHome = new MetaJadeHome();
    
    console.log('1. åˆå§‹åŒ– DHT æœåŠ¡å™¨...');
    await withTimeout(metaJadeHome.start(), 3000, 'åˆå§‹åŒ–è¶…æ—¶');
    console.log('âœ“ DHT æœåŠ¡å™¨åˆå§‹åŒ–æˆåŠŸ');
    
    console.log('2. è·å–æœåŠ¡å™¨çŠ¶æ€...');
    const status = {
      peerId: await withTimeout(metaJadeHome.getPeerId(), 3000, 'è·å– PeerId è¶…æ—¶'),
      multiaddrs: await withTimeout(metaJadeHome.getMultiaddrs(), 3000, 'è·å– Multiaddrs è¶…æ—¶'),
      connectionCount: await withTimeout(metaJadeHome.getConnectionCount(), 3000, 'è·å–è¿æ¥æ•°è¶…æ—¶'),
      routingTableSize: await withTimeout(metaJadeHome.getRoutingTableSize(), 3000, 'è·å–è·¯ç”±è¡¨å¤§å°è¶…æ—¶')
    };
    console.log('âœ“ è·å–æœåŠ¡å™¨çŠ¶æ€æˆåŠŸ:', status);
    
    console.log('3. æµ‹è¯•æ•°æ®å­˜å‚¨...');
    await withTimeout(metaJadeHome.store('test-key', 'test-value'), 3000, 'å­˜å‚¨æ•°æ®è¶…æ—¶');
    console.log('âœ“ æ•°æ®å­˜å‚¨æˆåŠŸ');
    
    console.log('4. æµ‹è¯•æ•°æ®æ£€ç´¢...');
    const value = await withTimeout(metaJadeHome.retrieve('test-key'), 3000, 'æ£€ç´¢æ•°æ®è¶…æ—¶');
    console.log('âœ“ æ•°æ®æ£€ç´¢æˆåŠŸï¼Œå€¼ä¸º:', value);
    
    console.log('5. æµ‹è¯•æä¾›æ•°æ®...');
    await withTimeout(metaJadeHome.provide('test-key'), 3000, 'æä¾›æ•°æ®è¶…æ—¶');
    console.log('âœ“ æä¾›æ•°æ®æˆåŠŸ');
    
    console.log('6. æµ‹è¯•æŸ¥æ‰¾èŠ‚ç‚¹...');
    await withTimeout(metaJadeHome.findPeer('test-peer-id'), 3000, 'æŸ¥æ‰¾èŠ‚ç‚¹è¶…æ—¶');
    console.log('âœ“ æŸ¥æ‰¾èŠ‚ç‚¹æˆåŠŸ');
    
    console.log('7. åœæ­¢ DHT æœåŠ¡å™¨...');
    await withTimeout(metaJadeHome.stop(), 3000, 'åœæ­¢æœåŠ¡å™¨è¶…æ—¶');
    console.log('âœ“ DHT æœåŠ¡å™¨åœæ­¢æˆåŠŸ');
    
    console.log('\nğŸ‰ æ‰€æœ‰æµ‹è¯•é€šè¿‡ï¼Node.js å®¢æˆ·ç«¯èƒ½å¤ŸæˆåŠŸè¿æ¥åˆ° C# gRPC æœåŠ¡ã€‚');
    
  } catch (error) {
    console.error('âŒ æµ‹è¯•å¤±è´¥:', error);
    console.error('é”™è¯¯è¯¦æƒ…:', error.stack);
  }
}

// è¿è¡Œæµ‹è¯•
testClient();
